--- a/src/app/task/task.component.css
+++ b/src/app/task/task.component.css
@@ -3,6 +3,6 @@
     border-radius: 10px;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
     border: 1px solid  rgba(0, 0, 0, 0.2);
-    
+    margin-bottom: 15px;
 
 }
