--- a/src/app/task/task.component.css
+++ b/src/app/task/task.component.css
@@ -6,3 +6,32 @@
     margin-bottom: 15px;
 
 }
+
+.crossOut{
+    text-decoration: line-through;
+}
+
+.text-wrapper{
+    display: flex;
+    align-items: center;
+}
+
+.text-wrapper input{
+margin-right: 15px;
+cursor: pointer;
+}
+
+.text-wrapper p{
+    flex: 1;
+    margin-right: 15px;
+}
+
+button{
+padding: 5px 10px;
+border: 1px solid green;
+background: none;
+height: fit-content;
+border-radius: 10px;
+color: green;
+cursor: pointer;
+}
